# src/swagger.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8000/api/v1",
+      "url": "http://localhost:8008/api/v1",
       "description": "Local server"
     }
   ],
@@ -230,6 +230,69 @@
         }
       }
     },
+    "/jobs/apply/{id}": {
+      "post": {
+        "summary": "Apply for a job",
+        "tags": ["Jobs"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Job ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Job applied successfully"
+          },
+          "404": {
+            "description": "Job not found"
+          }
+        }
+      }
+    },
+    "/jobs/applicants": {
+      "get": {
+        "summary": "Get all applied Jobs For Job Seeker",
+        "tags": ["Jobs"],
+        "parameters": [
+      {
+        "name": "page",
+        "in": "query",
+        "required": false,
+        "schema": {
+              "type": "integer",
+              "default": 1,
+              "minimum": 1
+            },
+            "description": "Page number (starts from 1)"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 10,
+              "minimum": 1
+            },
+            "description": "Number of items per page"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Applied application fetched successfully"
+          },
+          "404": {
+            "description": "Applications not found"
+          }
+        }
+      }
+    },
     "/aws/upload": {
       "post": {
         "summary": "Upload a file to AWS S3",
@@ -348,6 +411,10 @@
           "password": {
             "type": "string",
             "example": "password123"
+          },
+          "role": {
+            "type": "string",
+            "example": "job_seeker"
           }
         }
       },
@@ -370,6 +437,67 @@
           "description": {
             "type": "string",
             "example": "Job description here"
+          },
+          "address": {
+            "type": "string",
+            "example": "123 Main Street"
+          },
+          "zipCode": {
+            "type": "string",
+            "example": "12345"
+          },
+          "type": {
+            "type": "string",
+            "enum": ["site_worker", "remote_worker"],
+            "example": "site_worker"
+          },
+          "tags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "example": ["construction", "full-time", "urgent"]
+          },
+          "country": {
+            "type": "string",
+            "example": "United States"
+          },
+          "state": {
+            "type": "string",
+            "example": "California"
+          },
+          "city": {
+            "type": "string",
+            "example": "Los Angeles"
+          },
+          "companyName": {
+            "type": "string",
+            "example": "BuildCorp Ltd."
+          },
+          "minimumRequirements": {
+            "type": "integer",
+            "example": 5
+          },
+          "maximumRequirements": {
+            "type": "integer",
+            "example": 50
+          },
+          "paymentType": {
+            "type": "string",
+            "enum": ["contractual", "hourly", "monthly"],
+            "example": "contractual"
+          },
+          "payment": {
+            "type": "integer",
+            "example": 2000
+          },
+          "shiftStartsAt": {
+            "type": "integer",
+            "example": 12
+          },
+          "shiftEndsAt": {
+            "type": "integer",
+            "example": 6
           }
         }
       },
